welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:7: error: not found: value i
    return (nums(i)==9)
                 ^